# webfused

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md  changelog.md  codecov.yml  deps.sh  install_deps.sh  meson.build  meson_options.txt
cmake/: FindPam.cmake  coverage.cmake
doc/: build.md  config.md
etc/: webfused.conf
src/daemon/: main.c
src/passwd/: main.c
src/userdb/: userdb.h  userdb_none.c  userdb_openssl.c
src/webfused/: change_user.c  change_user.h  daemon.c  daemon.h  main.c  mountpoint_factory.c  mountpoint_factory.h
src/webfused/auth/: authenticator.c  authenticator.h  factory.c  factory.h  file_authenticator.c  file_authenticator.h  pam_authenticator.c  pam_authenticator.h
src/webfused/authentication/: auth_settings.h  auth_settings_builder.h
src/webfused/config/: auth_settings.c  auth_settings.h  builder.c  builder.h  config.c  config.h  config_intern.h  factory.c  factory.h  settings.c  settings.h  settings_intern.h
src/webfused/log/: log.c  log.h  logger.c  logger.h  manager.c  manager.h  stderr_logger.c  stderr_logger.h  syslog_logger.c  syslog_logger.h
src/webfused/util/: string_list.c  string_list.h
subprojects/: fuse3.wrap  libwebsockets.wrap  webfuse.wrap
test/: change_user.cc  daemon.cc  invalid.conf  mock_auth_settings.cc  mock_auth_settings.hpp  mock_config_builder.cc  mock_config_builder.hpp  mock_credentials.cc  mock_credentials.hpp  mock_libconfig.cc  mock_libconfig.hpp  mock_linux.cc  mock_logger.cc  mock_logger.hpp  mock_pam.cc  mock_pam.hpp  mock_server.cc  mock_settings.cc  mock_settings.hpp  mountpoint_factory.cc  test_auth_factory.cc  test_auth_settings.cc  test_change_user.cc  test_config.cc  test_config_factory.cc  test_daemon.cc  test_file_authenticator.cc  test_log.cc  test_mountpoint_factory.cc  test_pam.cc  test_pam_authenticator.cc  test_passwd.json  test_settings.cc  test_stderr_logger.cc  test_syslog_logger.cc  userdb.cc  wrap_utils.hpp
test/auth/: factory.cc  file_authenticator.cc  pam_authenticator.cc
test/config/: config.cc  configfile.cc  configfile_auth.cc  configfile_filesystem.cc  configfile_log.cc  configfile_server.cc  configfile_user.cc  configfile_version.cc  factory.cc
test/log/: log.cc  log_manager.cc  syslog_logger.cc
test/mock/: config_builder.cc  config_builder.hpp  credentials.cc  credentials.hpp  libconfig.cc  linux.cc  linux.hpp  logger.cc  pam.cc  pam.hpp  server.cc  server.hpp  settings.cc  settings.hpp
test/util/: string_list.cc  wrap.hpp
